Fetching Activity Content - Need `rating` & `isRepeated` from back-end